--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -6,7 +6,14 @@ on:
     branches:
       - main
       - feature/*
-      - (!feature/feat1)
+      # works -  feature/feat1
+      # doesn't work - feature/feat/feature
+      # To make above work - feature/**
+      - (!feature/feat1) # we don't the workflow to be triggered
+    paths:
+      - `*.md`
+      - `images/*`
+      - `docs/*`
 jobs:
   job-1:
     runs-on: ubuntu-latest
