--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -12,7 +12,7 @@ jobs:
   job-1:
     runs-on: ubuntu-latest
     env:
-        job_env: 'job env1'
+        workflow_env: 'job env1'
         job_env_2: 'job env2'
     steps:
       - name: step-1
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo global: ${workflow_env}
           echo global: ${workflow_env_2}
-          echo job level: ${job_env}
+          echo job level: ${workflow_env}
           echo job level: ${job_env_2}
           echo step level: ${step_env}
           echo commit id: ${GITHUB_SHA}
